--- a/2021-1/apunte/Cap.05.tex
+++ b/2021-1/apunte/Cap.05.tex
@@ -34,8 +34,25 @@ Este ejemplo y la definición misma no son demasiado esclarecedores, y solamente
     \caption{Una representación pictórica del grafo definido en (\ref{grafosimple}).}\label{f5.1}
 \end{figure}
 
+
+
+
 Nosotros representamos los vértices como puntos, y unimos dos puntos con una linea siempre y cuando el correspondiente par de vértices está en una arista. Luego la Fig. \ref{f5.1} es una representación pictórica del grafo dado en el ejemplo arriba. Esta clase de representación es extremadamente conveniente para
-trabajar ``a mano'' con grafos relativamente pequeños. Más aún, esta representación es de gran ayuda para formular y comprender argumentos abstractos. Nosotros damos a continuación un ejemplo frívolo.
+trabajar ``a mano'' con grafos relativamente pequeños. Más aún, esta representación es de gran ayuda para formular y comprender argumentos abstractos. 
+
+\begin{definicion}
+    La \textit{{valencia}} o \textit{grado} de un vértice $v$ en un grafo $G=(V,E)$ es el \index{valencia de un vértice} número de aristas de $G$ que contienen a $v$. Usaremos la notación $\delta(v)$ para la valencia de $v$, formalmente
+$$
+\delta(v)=|D_v|, \quad \text{ donde } \quad D_v=\{e \in E| v\in
+e\}.
+$$
+\end{definicion}
+
+Por ejemplo, el grafo descrito en Fig. \ref{f5.1} tiene $\delta(a)=2$, $\delta(b)=2$, $\delta(c)=1$, $\delta(d)=3$, $\delta(z)=2$.
+
+
+
+Nosotros damos a continuación un ejemplo frívolo de un problema que se resuelve  pensándolo como un grafo.
 
 \begin{figure}[h]
     \begin{center}
@@ -66,7 +83,41 @@ Denotemos los vértices con estos números y usemos $M$ para Mario. Así obtenem
 Ahora, el vértice $8$ alcanza a todos los otros vértices excepto uno, el cual debe por lo tanto representar a la esposa de $8$. Este vértice debe ser el $0$ el cual por cierto que no está unido al $8$ (ni ob\-via\-men\-te a ningún otro). Luego $8$ y $0$ son una pareja de casados y $8$ está unido a $1, 2, 3, 4, 5, 6, 7$ y $M$. En particular el $1$ está unido al $8$ y ésta es la única arista que parte del $1$. Por consiguiente $7$ no esta unido al $0$ y al $1$ (únicamente), y la esposa de $7$ debe ser $1$, puesto que $0$ esta casado con $8$. Continuando con este razonamiento vemos que $6$ y $2$, y $5$ y $3$ son parejas de casados. Se sigue entonces que $M$ y $4$ están casados, luego el vértice $4$ representa a Abril, quien estrechó la mano de cuatro personas.
 \end{proof}
 
-Aunque la representación pictórica es intuitivamente atractiva para los seres humanos, es claramente inútil cuando deseamos comunicarnos con una computadora. Para lograr esto debemos re\-pre\-sen\-tar el grafo mediante cierta clase de lista o tabla. Diremos que dos vértices $x$ e $y$ de un grafo son \textit{adyacentes} cuando $\{x,y\}$ es una arista. \index{vértices adyacentes} (o también diremos que $x$ e $y$ son \textit{vecinos}).  Entonces podemos representar un grafo $G=(V,E)$ por su \textit{lista de adyacencia},  \index{lista de adyacencia} donde cada vértice $v$ encabeza una lista de aquellos vértices que son adyacentes a $v$. El grafo de Fig. \ref{f5.1} tiene la siguiente lista de adyacencia:
+\begin{ejemplo}\label{ejemplo-grafo-rueda}
+Los senderos de un jardín han sido diseñados dándoles forma de \textit{grafo rueda} $W_n$ ($n \ge 2$), cuyos vértices son $V=\{0,1,2,\ldots,n\}$ y sus aristas son
+$$
+\begin{matrix*}[l]
+\{0,1\}, &\{0,2\},&\ldots,&\{0,n-1\}, &\{0,n\},&\quad\text{(los rayos de la rueda)}\\
+\{1,2\}, &\{2,3\},&\ldots,&\{n-1,n\},&\{n,1\}.&\quad\text{(el perímetro de la rueda)}
+\end{matrix*}
+$$
+Describir una ruta por los senderos de tal forma que empiece y termine en el vértice $0$ y que pase por cada vértice una sola vez.
+\end{ejemplo}
+\begin{proof}[Solución]
+        Primero  dibujemos el grafo para darnos cuenta de por que se llama ``rueda''. Dibujemos $W_6$. El dibujo nos orienta de como puede ser una ruta: $0,1,2,3,4,5,6,0$. 
+        \begin{figure}[h]
+            \begin{center}
+            \begin{tikzpicture}[scale=0.65]
+                %\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+                %
+                \Vertex[x=0.00, y=0.00]{0}            
+                \Vertex[x=3.00, y=0.00]{1}
+                \Vertex[x=1.50, y=2.60]{2}
+                \Vertex[x=-1.50, y=2.60]{3}
+                \Vertex[x=-3.00, y=0.00]{4}
+                \Vertex[x=-1.50, y=-2.60]{5}
+                \Vertex[x=1.50, y=-2.60]{6}
+                \Edges(1,2,3,4,5,6,1)
+                \Edges(1,0,4) \Edges(2,0,5) \Edges(3,0,6) 
+            \end{tikzpicture}
+        \end{center}
+        \end{figure}
+        
+
+        En  general una respuesta para $W_n$ es: $0,1,2,3,\cdots,n-1,n,0$.   
+\end{proof}
+
+Aunque la representación pictórica es intuitivamente atractiva para los seres humanos, es claramente inútil cuando deseamos comunicarnos con una computadora. Para lograr esto debemos re\-pre\-sen\-tar el grafo mediante el conjunto de aristas, como en la definición formal, o cierta clase de lista o tabla. Diremos que dos vértices $x$ e $y$ de un grafo son \textit{adyacentes} cuando $\{x,y\}$ es una arista. \index{vértices adyacentes} (o también diremos que $x$ e $y$ son \textit{vecinos}).  Entonces podemos representar un grafo $G=(V,E)$ por su \textit{lista de adyacencia},  \index{lista de adyacencia} donde cada vértice $v$ encabeza una lista de aquellos vértices que son adyacentes a $v$. El grafo de Fig. \ref{f5.1} tiene la siguiente lista de adyacencia:
 
 \begin{center}
 \begin{tabular}{ccccc}
@@ -80,23 +131,18 @@ $d$&$z$&&$c$&$d$\\
 Las listas de adyacencia son redundantes (cada arista está representada dos veces) pero como todo lenguaje de programación de alto nivel maneja la estructura tipo lista,  preferimos esta representación pues  un grafo  resulta ser una lista de listas  o un  arreglo de listas.  
 
 
-\begin{ejemplo*}
+\begin{definicion}
 Por cada entero positivo $n$ definimos el \textit{grafo completo  \index{grafo completo} $K_n$} como el grafo con $n$ vértices y en el cual cada par de vértices es adyacente. 
+\end{definicion}
 
-¿Cuántas aristas tiene $K_n$? De cada vértice ``salen'' $n-1$ aristas, las que van a otros vértices. Si  sumamos $n$-veces las $n-1$ aristas es claro que estamos contando cada arista dos veces, luego el número total de aristas es $n(n-1)/2$ (observar que esta es una demostración, usando  grafos, de que $\sum_{i=1}^n i = n(n-1)/2$).
-\end{ejemplo*}
+
+¿Cuántas aristas tiene $K_n$? ¿Cuál es la valencia de cada vértice? De cada vértice ``salen'' $n-1$ aristas, las que van a otros vértices. Luego, cada vértice tiene valencia $n-1$. Si  sumamos $n$-veces las $n-1$ aristas que salen de cada vértice es claro que estamos contando cada arista dos veces, luego el número total de aristas es $n(n-1)/2$ (observar que esta es una demostración, usando  grafos, de que $\sum_{i=1}^n i = n(n-1)/2$).
+
 
 \subsection*{$\S$ Ejercicios}
 \begin{enumex}
 \item A tres casas $A,B,C$ se les debe conectar el gas, el agua y la electricidad: $G,W,E$. Escribir la lista de adyacencia para el grafo que representa este problema y construir una representación pictórica del mismo. ¿Puede usted encontrar un dibujo en el cual las líneas que representan las aristas no se crucen?
-\item Los senderos de un jardín han sido diseñados dándoles forma de \textit{grafo rueda} $W_n$, cuyos vértices son $V=\{0,1,2,\ldots,n\}$ y sus aristas son
-$$
-\begin{aligned}
-\{0,1\},\qquad &\{0,2\},\ldots,\{0,n\}, \\
-\{1,2\}.\qquad &\{2,3\},\ldots,\{n-1,n\},\qquad \{n,1\}.
-\end{aligned}
-$$
-Describir una ruta por los senderos de tal forma que empiece y termine en le vértice $0$ y que pase por cada vértice una sola vez. \item  ¿Para cuales valores de $n$ se puede hacer una representación pictórica
+\item  ¿Para cuales valores de $n$ se puede hacer una representación pictórica
 de $K_n$ con la propiedad que las líneas que representan las aristas no se corten? 
 \item Un \textit{{$3$-ciclo}} en un grafo es un conjunto de tres vértices mutuamente adyacentes. Construir un grafo con cinco vértices y seis aristas que no contenga $3$-ciclos.
 \end{enumex}
@@ -283,12 +329,7 @@ $$
 
 
 \begin{section}{Valencias de un grafo}\label{seccion-valencias-de-un-grafo}
-La \textit{{valencia}} o \textit{grado} de un vértice $v$ en un grafo $G=(V,E)$ es el \index{valencia de un vértice} número de aristas de $G$ que contienen a $v$. Usaremos la notación $\delta(v)$ para la valencia de $v$, formalmente
-$$
-\delta(v)=|D_v|, \quad \text{ donde } \quad D_v=\{e \in E| v\in
-e\}.
-$$
-El grafo descrito en Fig. \ref{f5.1} tiene $\delta(a)=2$, $\delta(b)=2$, $\delta(c)=1$, $\delta(d)=3$, $\delta(z)=2$. El primer teorema de la teoría de grafos nos dice que la suma de estos números es dos veces el número de aristas.
+El primer teorema de la teoría de grafos nos dice que la suma de las valencias de un grafo  es dos veces el número de aristas.
 
 \begin{teorema}\label{t5.3} La suma de los valores de las valencias $\delta(v)$, tomados sobre todos los vértices $v$ del grafo $G=(V,E)$, es igual a dos veces el número de aristas:
 $$
@@ -326,9 +367,7 @@ Una extensión de esta idea se da en la siguiente proposición.
 \begin{proof} Hemos visto más arriba que si $\alpha:V_1 \to  V_2$ es un isomorfismo entre $G_1$ y $G_2$ y $v\in V_1$, entonces $\delta(v)=\delta(\alpha(v))$. Luego la cantidad de vértices con valencia $k$ en $G_1$ es igual  a la cantidad de vértices con valencia $k$ en $G_2$.     
 \end{proof}
 
-\begin{ejemplo*} Revisemos los grafos de la Fig. \ref{f5.4} y la Fig. \ref{f5.5} de la sección anterior. 
-
-Los dos grafos de la Fig. \ref{f5.4}  no son isomorfos debido a que en el primer grafo existen tres vértices con valencia $3$ mientras que en el segundo existen sólo dos.
+\begin{ejemplo*} Revisemos los grafos de la Fig. \ref{f5.4} y la Fig. \ref{f5.5} de la sección anterior.  Los dos grafos de la Fig. \ref{f5.4}  no son isomorfos debido a que en el primer grafo existen tres vértices con valencia $3$ mientras que en el segundo existen sólo dos.
 
 Observar que los criterios vistos hasta ahora relativos a cantidad de vértices,  cantidad de aristas y valencias, incluyendo el de la proposición \ref{criterioiso}, no son útiles para determinar si los grafos de  la Fig. \ref{f5.5} son isomorfos o no: ambos tienen $6$ vértices, $9$ aristas y todos los vértices son de valencia $3$. Sin embargo, en el caso de la Fig. \ref{f5.5} podemos determinar que los grafos no son isomorfos observando los subgrafos de cada uno. Ahora bien, no  hay ningún criterio general eficiente para determinar si dos grafos son isomorfos o no: en los casos difíciles esencialmente debemos probar con todas las biyecciones posibles de los vértices de un grafo a los vértices del otro y eso es no computable para casos no demasiado  grandes.   
 \end{ejemplo*}
@@ -481,11 +520,13 @@ es que $G$ debe tener a lo más dos vértices impares. Más aún, puede probarse
 Resumiendo las definiciones de más arriba:
 
 \begin{definicion}
-Un \textit{ciclo hamiltoniano} en un grafo $G$ es un ciclo que contiene a todos los vértices del grafo.
-
-Una \textit{caminata euleriana} en un grafo $G$ es un caminata que usa todas las aristas de $G$ exactamente
+Un \textit{ciclo hamiltoniano} en un grafo $G$ es un ciclo que contiene a todos los vértices del grafo. Una \textit{caminata euleriana} en un grafo $G$ es un caminata que usa todas las aristas de $G$ exactamente
 una vez. Una caminata euleriana que comienza y termina en un mismo vértice se llama también \textit{circuito euleriano}.
 \end{definicion}
+
+\begin{ejemplo*}
+    En  el ejemplo \ref{ejemplo-grafo-rueda} vimos que dado $n \in \N$, entonces el grafo rueda $W_n$ tiene ciclos hamiltonianos. Con el resultado del teorema \ref{th-caminata-euleriana} veremos que  el grafo rueda nunca tiene caminatas eulerianas. 
+\end{ejemplo*}
 
 El siguiente teorema resume los resultados sobre caminatas eulerianas. La demostración no es demasiada complicada, pero la veremos más adelante.  
 
@@ -510,15 +551,37 @@ El siguiente teorema resume los resultados sobre caminatas eulerianas. La demost
 
 \subsection*{Algoritmo de Hierholzer}
 
-C. Hierholzer (1840-1871) mostró, poco antes de su muerte, un algoritmo fácilmente implementable para encontrar un circuito euleriano  para cualquier grafo  con vértices de grado  par. El algoritmo de Hierholzer fue la primera demostración del teorema \ref{th-caminata-euleriana} para el caso  de grafos con vértices de grado par. Obviamente,  debido a la observación  \ref{obs-impar-a-par}, esto demuestra también el teorema para grafos con dos valencias impares.
+C. Hierholzer (1840-1871) mostró, poco antes de su muerte, un algoritmo fácilmente implementable para encontrar un circuito euleriano  para cualquier grafo  con vértices de grado  par. El algoritmo de Hierholzer\index{algoritmo de Hierholzer} fue la primera demostración del teorema \ref{th-caminata-euleriana} para el caso  de grafos con vértices de grado par. 
+%Obviamente,  debido a la observación  \ref{obs-impar-a-par}, esto demuestra también el teorema para grafos con dos valencias impares. 
+Nosotros veremos aquí una versión del algoritmo de Hierholzer se aplica tanto a los grafos con todos los vértices de valencia par o con dos vértices de valencia impar. 
 
-La idea clave del algoritmo de Hierholzer  es la siguiente: en un grafo de valencias pares (conexo o no conexo) cada vez que inicio una caminata que no repite aristas puedo volver al vértice original. Observar que no es posible quedarse atascado en ningún vértice que no sea  el vértice original, porque el grado par de todos los vértices garantiza que, cuando se ingresa a un vértice distinto al original debe haber una  arista sin usar que nos permite dejarlo.
+Para explicar el algoritmo de Hierholzer no es útil la siguiente definición:  un \textit{recorrido euleriano} es una caminata o circuito que no repite aristas. Un \textit{recorrido euleriano maximal}  es un recorrido euleriano que respetando la condición de no repetir aristas no es posible continuarlo.  
 
+La idea clave del algoritmo de Hierholzer  es la siguiente:  en un grafo de valencias pares (conexo o no conexo) todo recorrido euleriano maximal termina en el vértice original. Observar que no es posible quedarse atascado en ningún vértice que no sea  el vértice original, porque el grado par de todos los vértices garantiza que, cuando se ingresa a un vértice distinto al original debe haber una  arista sin usar que nos permite dejarlo. 
+
+Más aún, esta idea se puede extender a los grafos conexos con dos vértices de valencia impar, en ese caso: todo recorrido euleriano maximal que parte de un vértice de valencia impar termina en el otro vértice de valencia impar. 
+
+Teniendo en cuenta las consideraciones anteriores podemos plantear el siguiente algoritmo:\index{algoritmo de Hierholzer}
+
+\begin{enumerate}
+    \item \textbf{Paso 1.} Elija el vértice inicial $v$ y haga un recorrido euleriano maximal. 
+    
+    
+    \item \textbf{Paso iterativo} Mientras exista un vértice $u$ en la caminata ya realizada que tenga aristas que no formen parte de la caminata, inicie otro recorrido  euleriano maximal siguiendo las aristas no utilizadas. Luego,  inserte en $u$ este recorrido a la caminata  anterior obteniendo una nueva caminata (más larga).
+\end{enumerate}
+
+Observemos que el recorrido del paso 1 en el caso del grafo con todas las valencias pares, es un recorrido cerrado. En el caso del grafo con dos valencias impares es un recorrido que va de un vértice impar al otro.  
+    
+En  cualquier de los dos casos el recorrido puede no cubrir todos los vértices y aristas del grafo inicial y el subgrafo que se obtiene eliminando las aristas del recorrido tiene todas las valencias pares. 
+
+En  el paso iterativo el subgrafo de las aristas disponibles tiene todos los vértices de valencia par y por lo tanto el recorrido euleriano comienza y  termina en el mismo vértice y allí se inserta.
+
+\begin{comment}
 El  algoritmo es el siguiente: 
 \begin{enumerate}
     \item \textbf{Paso 1.} Elija cualquier vértice  inicial $v$ y haga una caminata  que no repita aristas y  que vuelva al vértice (de $v$ a $v$). 
     
-     El recorrido formado de esta manera es un recorrido cerrado, pero puede no cubrir todos los vértices y aristas del grafo inicial.
+    El recorrido formado de esta manera es un recorrido cerrado, pero puede no cubrir todos los vértices y aristas del grafo inicial.
 
     \item \textbf{Paso iterativo} Mientras exista un vértice $u$ en la caminata ya realizada, pero que tenga aristas que no formen parte de la caminata, inicie otra caminata desde $u$ hasta $u$ siguiendo las aristas no utilizadas. Luego,  inserte esta  caminata a la caminata  anterior para formar una caminata nueva (más larga).
     
@@ -526,11 +589,11 @@ El  algoritmo es el siguiente:
 \end{enumerate}
 
 Puesto que suponemos que el grafo original es conexo, repetir el paso iterativo agotará todos las aristas del grafo.
-  
-\begin{ejemplo*} Dado  el  grafo de de la  Fig. \ref{f5.7.1}, encontremos una caminata euleriana con origen en $p$ y final en $r$. 
+\end{comment}
 
-Debemos primero observar que  debe existir un circuito euleriano, pues $\delta(p)=4$, $\delta(q)=4$, $\delta(r)=4$, $\delta(s)=4$,
-$\delta(t)=4$, y $\delta(u)=2$,  es decir todos los vértices tienen grado par. 
+\begin{ejemplo*} Dado  el  grafo de de la  Fig. \ref{f5.7.1}, encontremos un circuito euleriano con origen en $u$. 
+
+Debemos primero observar que  debe existir un circuito euleriano, pues $\delta(p)=4$, $\delta(q)=4$, $\delta(r)=4$, $\delta(s)=4$, $\delta(t)=4$, y $\delta(u)=2$,  es decir todos los vértices tienen grado par. 
 
 
 \begin{figure}[ht]
@@ -555,46 +618,60 @@ $\delta(t)=4$, y $\delta(u)=2$,  es decir todos los vértices tienen grado par.
     \caption{El gran tour, de nuevo.} \label{f5.7.1}
 \end{figure}
 
-Apliquemos el algoritmo de Hierholzer partiendo  desde $p$. Una caminata posible con origen en $p$ y que vuelva a $p$ es $$p, q, s, r, p.$$
+Apliquemos el algoritmo de Hierholzer partiendo  desde $u$. Una caminata posible con origen en $u$ y que vuelva a $u$ es $$u, r, p, q, s, t, u.$$
 
-Ahora elijamos $q$ que es un vértice que pertenece a la caminata pero que tiene aristas que no son parte de la caminata. Una caminata que no toca aristas usadas y  que parte de $q$ y regresa a $q$ es $q,r,u,t,q$. Insertamos en $q$  esta caminata  a la caminata anterior y obtenemos:
-$$
-p,\mathbf{q,r,u,t,q,} s, r, p. 
-$$
+
+Ahora elijamos $q$ que es un vértice que pertenece a la caminata pero que tiene aristas que no son parte de la caminata (ver figura \ref{f5.7.1b}). Una caminata que no toca aristas usadas y  que parte de $q$ y regresa a $q$ es $q,t,p,s,r,q$.  
+Insertamos en $q$  esta caminata  a la caminata anterior y obtenemos:
+$$u, r, p, \mathbf{q,t,p,s,r,q}, s, t, u.$$
 (En  negrita la caminata insertada).
-
-En  el siguiente paso podemos  elegir $t$ y hacer la caminata $t, p, s, t$ que no pasa por aristas ya utilizadas. Insertamos esta caminata en algún $t$ de la caminata anterior y obtenemos:
-$$
-p,q,r,u,t, p, s, t,q, s, r, p,
-$$
-que es un circuito euleriano. 
 \end{ejemplo*}
 
 
+\begin{figure}[ht]
+    \begin{center}
+    \begin{tikzpicture}[scale=1]
+    %\SetVertexSimple[Shape=circle,FillColor=white]
+    \def\rvar{1.2}
+    \Vertex[x=0.00, y=-2.00, L=$u$]{$u$} % 3
+    \Vertex[x=\rvar*1.90, y=-0.62, L=$t$]{$t$} % 2
+    \Vertex[x=\rvar*1.18, y=1.62, L=$q$]{$q$} % 1
+    \Vertex[x=-1.18*\rvar, y=1.62, L=$p$]{$p$} % 0
+    \Vertex[x=-1.90*\rvar, y=-0.62, L=$r$]{$r$} % 4
+    \Vertex[x=0, y=0, L=$s$]{$s$} % 5
+    \Edges($t$,$q$)
+    \Edges($r$,$s$)
+    \Edges($q$,$r$)
+    \Edges($p$,$t$)
+    \Edges($s$,$p$)
+    \end{tikzpicture}
+    \end{center}
+    \caption{El subgrafo de aristas no utilizadas.} \label{f5.7.1b}
+\end{figure}
 
-\begin{observacion*} Escribiremos en pseudocódigo el algoritmo para hallar un circuito euleriano en un grafo $G$ con $n$ vértices  de valencia par.
+\begin{comment}
+\begin{observacion*} Escribiremos en pseudocódigo el algoritmo para hallar una caminata o circuito euleriano en un grafo $G$ con $n$ vértices  de valencia par.
     
-Tenemos una grafo $G$ con  $n$ vértices numerados $0,1,\ldots,n-1$,  $G$ se representa por  una lista de adyacencia, es decir $G[i]$  es la lista de vértices adyacentes a $i$.  Tomamos como comienzo del recorrido el vértice arbitrario $0$.
+Como ya mencionamos anteriormente, a un grafo $G$ lo representaremos por una lista de adyacencia. Supongamos que los vértices de $G$ son $0,\ldots,k$,  entonces $G[i] = [i_0,i_1,\ldots]$ serán los vértices adyacentes al vértice $i$. Tomamos como comienzo del recorrido el vértice arbitrario $0$.
 
-Como ya mencionamos anteriormente, a un grafo $G$ lo representaremos por una lista de adyacencia. Supongamos que los vértices de $G$ son $0,\ldots,k$,  entonces $G[i] = [i_0,i_1,\ldots]$ serán los vértices adyacentes al vértice $i$.  
+
 
 
 
 \vskip .4cm
 {%\centering
 \begin{minipage}{0.95\textwidth}
-\noindent \textsc{Caminata euleriana }
+\noindent \textsc{Circuito euleriano}
 \vskip .2cm
 \begin{small}
 \begin{verbatim}
 # pre: G grafo con todos los vértices de valencia par 
-# post: devuelve 'circuito' una lista de vértices que forma una 
-#       caminata euleriana. 
-#       La caminata empieza en 0 (y terminará en 0).
+# post: cuando termina 'circuito' es una lista de vértices que es
+#       un circuito euleriano que empieza en 0 (y termina en 0).
 circuito = [0]  # inicio de la caminata
-libres = copiar_grafo(G) # aristas no utilizadas
-while nro_aristas(libres) > 0:
-    sub_cam = []   
+libres = G # aristas no utilizadas
+while nº de aristas(libres) > 0:
+    sub_caminata = []   
     h = 0
     while libres[h] == [] or h not in circuito:
         h = h + 1
@@ -603,24 +680,64 @@ while nro_aristas(libres) > 0:
     p0 = h
     p1 = libres[h][0] 
     while p1 != h: # mientras no se vuelva al origen
-        sub_cam.append(p1)  # agrega p1 a sub_cam 
-        libres.remove({p0,p1}) # quitar arista p0, p1 
+        sub_caminata.append(p1)  # agrega p1 a sub_caminata 
+        libres.remover({p0,p1}) # quitar arista p0, p1 
         p0 = p1 
         p1 = libres[p0][0]
-    libres.remove({p0, h}) # quitar arista p0, h 
-    circuito = circuito[:pos+1] + sub_cam + circuito[pos:]
-return circuito   
+    libres.remover({p0, P1}) # quitar arista p0, p1 = h 
+    circuito = circuito[:pos+1] + sub_caminata + circuito[pos:]
 \end{verbatim}
 \end{small}
 \end{minipage}
 }
 
+
 \vskip .4cm
 En todo  el programa \texttt{libres} es una lista de adyacencia que nos va dando las aristas no utilizadas. 
-Es decir si $w$ es un vértice \texttt{libres[w]} es una lista de los vértices $u$ tal que la arista $wu$ no ha sido utilizada.
+Es decir si $w$ es un vértice \texttt{libres[w]} es una lista de los vértices $u$ tal que la arista $wu$ no ha sido utilizada. 
 \end{observacion*}
+\end{comment}
+
+\begin{observacion*} Escribiremos en pseudocódigo el algoritmo de Hierholzer para hallar un circuito euleriano en un grafo $G$ con $n$ vértices  de valencia par o una caminata euleriana en un grafo con dos valencias impares.
+    
+Como ya mencionamos anteriormente, a un grafo $G$ lo representaremos por una lista de adyacencia. Supongamos que los vértices de $G$ son $0,\ldots,k$,  entonces $G[i] = [i_0,i_1,\ldots]$ serán los vértices adyacentes al vértice $i$. Tomamos como comienzo del recorrido el vértice  $0$. En  el caso de los grafos con valencia impar el vértice $0$ debe ser impar. 
+    
+    \vskip .4cm 
+
+    \begin{minipage}{0.95\textwidth}
+\noindent \textsc{Circuito/Caminata euleriana}
+
+\vskip .2cm
+\begin{small}
+\begin{verbatim}
+# pre: G grafo con todos los vértices de valencia par o dos impares
+# post: cuando termina 'caminata' es una lista de vértices que es
+#       una caminata o circuito euleriano que empieza en 0.
+libres = G.copiar() # sub grafo de aristas no utilizadas
+caminata = [0] # comenzamos de 0
+h = 0
+while libres.nro_aristas() > 0:
+    while libres.adyacentes(h) == [] or h not in caminata:
+        h = h + 1
+    # h = vértice en caminata y libre[h] != [] (hay aristas libres)
+    pos = caminata.index(h) # en pos se insertará el rec. euleriano
+    p0 = h
+    sub_caminata = [p0]  # sub caminata
+    while len(libres.adyacentes(p0)) > 0:
+        p1 = libres.adyacentes(p0)[0]
+        sub_caminata.append(p1)  # agrega p1 a caminata
+        libres.quitar_arista([p0,p1]) # quitar arista p0, p1 
+        p0 = p1 
+    # sub_caminata es ahora un recorrido euleriano
+    caminata =  caminata[:pos] + sub_caminata + caminata[pos+1:]
+\end{verbatim}
+\end{small}
+\end{minipage}
+
+En el algoritmo, \verb+libres.nro_aristas()+ indica el número de aristas en el grafo \verb+libres+, \verb+caminata.index(h)+ indica en que lugar de la caminata se encuentra \verb+h+ y \verb+libres.adyacentes(p0)+ indica la lista de vértices adyacentes a \verb+p0+ en el grafo \verb+libres+. 
 
 
+\end{observacion*}
 
 \subsection*{$\S$ Ejercicios}\label{ejercicios5.4}
 
@@ -657,7 +774,7 @@ $$
 
 
 \begin{section}{Árboles}\label{seccion-arboles}
-\begin{definicion} Diremos que un grafo $T$ es un \textit{árbol} si cumple \index{árbol}
+\begin{definicion} Diremos que un grafo $T$ es un \textit{árbol} si cumple \index{arbol} 
 \begin{enumerate}
 \item[\textbf{T1)}] \label{T1}$T$ es conexo y no hay ciclos en $T$.
 \end{enumerate}
