--- a/2021-1/apunte/main.tex
+++ b/2021-1/apunte/main.tex
@@ -132,7 +132,7 @@
 %%%=======================
 %%%=======================
 %%% CAP3 =================
-   \input{Cap.03.tex}
+    \input{Cap.03.tex}
 %%%=======================
 %%%=======================
 %%% CAP4 =================
@@ -145,7 +145,7 @@
 %%%=======================
 %%%=======================
 %%% CAP6 =================
-    \input{Cap.06.tex}
+    %\input{Cap.06.tex}
 %%%=======================
 \appendix
 \part{Ap\'endices} 
