--- a/2021-1/beamer/C20_md1.tex
+++ b/2021-1/beamer/C20_md1.tex
@@ -22,10 +22,10 @@
 \usetikzlibrary{arrows}
 \usetikzlibrary{matrix}
 \tikzset{
-	every picture/.append style={
-		execute at begin picture={\deactivatequoting},
-		execute at end picture={\activatequoting}
-	}
+    every picture/.append style={
+        execute at begin picture={\deactivatequoting},
+        execute at end picture={\activatequoting}
+    }
 }
 \usetikzlibrary{decorations.pathreplacing,angles,quotes}
 \usetikzlibrary{shapes.geometric}
@@ -36,9 +36,9 @@
 \usepackage{tkz-graph}
 \usepackage{polynom}
 \polyset{%
-	style=B,
-	delims={(}{)},
-	div=:
+    style=B,
+    delims={(}{)},
+    div=:
 }
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate]{label={(\arabic*)}}
@@ -94,441 +94,441 @@
 
 
 
-\title[Clase 21 - Grafos 3]{Matemática Discreta I \\ Clase 21 - Grafos 3}
+\title[Clase 20 - Caminatas, caminos y ciclos]{Matemática Discreta I \\ Clase 20 - Caminatas, caminos y ciclos}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
-	\\[\baselineskip] ${}^{}$
-	\\[\baselineskip]
+    \\[\baselineskip] ${}^{}$
+    \\[\baselineskip]
 }
-\date[02/06/2020]{28 de mayo de 2020}
+\date[01/06/2021]{1º de junio de 2021}
 
 
 
 
 \begin{document}
-	
-	\frame{\titlepage} 
-	
-	
-	
-	
-	\begin{frame}
-		Una aplicación importante de la noción de valencia es en el problema de determinar si dos grafos son o no isomorfos. 
-		
-		\vskip .6cm
-		
-		Si 	$\alpha:V_1 \to  V_2$ es un isomorfismo entre $G_1$ y $G_2$, y $\alpha(v)=w$, entonces cada arista que contiene a $v$ se transforma en una arista que contiene a $w$. 
-		
-		\vskip .6cm
-		
-		En consecuencia $\delta(v)=\delta(w)$. Por otro lado, si $G_1$ tiene un vértice $x$, con valencia $\delta(x)=\delta_0$, y $G_2$ no tiene vértices	con valencia $\delta_0$, entonces $G_1$ y $G_2$ no pueden ser	isomorfos. 
-		
-		
-		
-		
-		
-		
-		
-		
-	\end{frame}
-	
-	
-	\begin{frame}
-		Esto nos da otra manera de ver que no son isomorfos los siguientes grafos:
-		
-		\vskip .5cm
-		\begin{figure}[ht]
-			\begin{center}
-				\begin{tabular}{llll}
-					&
-					\begin{tikzpicture}[scale=1]
-						%\SetVertexSimple[Shape=circle,FillColor=white]
-						\Vertex[x=0.00, y=2.00]{$a$}
-						\Vertex[x=1.90, y=0.62]{$b$}
-						\Vertex[x=1.18, y=-1.62]{$c$}
-						\Vertex[x=-1.18, y=-1.62]{$d$}
-						\Vertex[x=-1.90, y=0.62]{$e$}
-						\Edges($c$, $b$,$a$,$e$,$d$,$b$,$a$,$d$)
-						\Edges($e$,$b$)
-					\end{tikzpicture}
-					&
-					\qquad
-					& 
-					\begin{tikzpicture}[scale=1]
-						%\SetVertexSimple[Shape=circle,FillColor=white]
-						\Vertex[x=0.00, y=2.00]{1}
-						\Vertex[x=1.90, y=0.62]{2}
-						\Vertex[x=1.18, y=-1.62]{3}
-						\Vertex[x=-1.18, y=-1.62]{4}
-						\Vertex[x=-1.90, y=0.62]{5}
-						\Edges(1,2,3,4,5,1)
-						\Edges(4,2,5)
-					\end{tikzpicture}
-				\end{tabular}
-			\end{center}
-		\end{figure}
-		\vskip .4cm
-		Puesto que el primer grafo tiene un vértice de
-		valencia 1 y el segundo no.
-	\end{frame}
-	
-	
-	\begin{frame}
-		Una extensión de esta idea se da en la siguiente proposición.
-		
-		\vskip .4cm
-		\begin{proposicion}\label{criterioiso}Sean  $G_1$ y $G_2$ grafos isomorfos. Para cada $k\ge 0$ sea $n_i(k)$ el
-			número de vértices de $G_i$ que tienen valencia $k$ ($i=1,2$).
-			Entonces $n_1(k)=n_2(k)$.
-		\end{proposicion}
-		\vskip .4cm
-		\begin{proof} Hemos visto más arriba que si $\alpha:V_1 \to  V_2$ es un isomorfismo entre $G_1$ y $G_2$ y $v\in V_1$, entonces $\delta(v)=\delta(\alpha(v))$. Luego la cantidad de vértices con valencia $k$ en $G_1$ es igual  a la cantidad de vértices con valencia $k$ en $G_2$.     
-		\end{proof}
-	\end{frame}
-	
-	\begin{frame}
-		
-		
-		No hay ningún criterio general eficiente para determinar si dos grafos son isomorfos o no. En  el siguiente ejemplo, no se aplica el criterio anterior. 
-		
-		\vskip .4cm
-		\begin{ejemplo}
-			Probar que los siguientes grafos no son isomorfos.
-			
-			\begin{figure}[ht]
-				\begin{center}
-					\begin{tabular}{llll}
-						&
-						\begin{tikzpicture}[scale=1]
-							\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-							\Vertex[x=0.00, y=2.00]{a}
-							\Vertex[x=2., y=-1.50]{b}
-							\Vertex[x=-2., y=-1.50]{c}
-							\Edges(a,b,c,a)
-							\Vertex[x=0.00, y=0.85]{1}
-							\Vertex[x=1., y=-0.9]{2}
-							\Vertex[x=-1., y=-0.9]{3}
-							\Edges(1,2,3,1)
-							\Edges(a,1,3,c,b,2)
-							\draw (0,-2.2) node {$G_1$};
-						\end{tikzpicture}
-						&
-						\qquad
-						& 
-						\begin{tikzpicture}[scale=0.65]
-							\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-							%				
-							\Vertex[x=3.00, y=0.00]{1}
-							\Vertex[x=1.50, y=2.60]{2}
-							\Vertex[x=-1.50, y=2.60]{3}
-							\Vertex[x=-3.00, y=0.00]{4}
-							\Vertex[x=-1.50, y=-2.60]{5}
-							\Vertex[x=1.50, y=-2.60]{6}
-							\Edges(1,2,3,4,5,6,1)
-							\Edges(1,4) \Edges(3,6) \Edges(2,5)
-							\draw (0,-3.8) node {$G_2$};
-						\end{tikzpicture}
-					\end{tabular}
-				\end{center}
-			\end{figure}
-		\end{ejemplo}
-		
-		
-	\end{frame}
-	
-	
-	
-	\begin{frame}
-		\begin{solucion}
-			Ambos tienen $6$ vértices, $9$ aristas y todos los vértices son de valencia $3$. 
-			
-			\vskip .4cm
-			
-			
-			Sin embargo, observar que  $G_1$ tiene un subgrafo $K_3$:
-			\begin{center}
-				\begin{tikzpicture}[scale=1]
-					\SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
-					\Vertex[x=0.00, y=2.00]{a}
-					\Vertex[x=2., y=-1.50]{b}
-					\Vertex[x=-2., y=-1.50]{c}
-					\Edges(a,b,c,a)
-				\end{tikzpicture}
-			\end{center}
-			
-			Mientras que $G_2$ no lo tiene. Por lo tanto, $G_1$ y $G_2$ no son isomorfos.
-			
-		\end{solucion}
-	\end{frame}
-	
-	\begin{frame}\frametitle{Caminatas, caminos y ciclos}
-		\begin{definicion}  Una {\em caminata} en un grafo $G$ es  \index{caminata}
-			una secuencia de vértices
-			$$
-			v_1,v_2,\ldots,v_k,
-			$$
-			tal que $v_i$ y $v_{i+1}$ son adyacentes ($1 \le i \le k-1$). Si
-			todos los vértices son distintos, una caminata es llamada un {\em
-				camino}.  \index{camino}
-			
-			\vskip .4cm
-			
-			Llamaremos {\em ciclo} a una caminata  \index{ciclo}
-			$v_1,v_2,\ldots,v_{r+1}$ cuyos vértices son distintos exceptuando
-			los extremos, es decir que $v_1=v_{r+1}$ y  a menudo diremos que es un {\em
-				$r$-ciclo}, o un ciclo de {\em longitud} $r$ en $G$.
-			\index{longitud de un ciclo}
-		\end{definicion}
-		
-	\end{frame}
-	
-	\begin{frame}
-		\begin{ejemplo}
-			Dibujemos caminatas, caminos y ciclos en el siguiente grafo:
-			\vskip .4cm
-			
-			\begin{figure}[ht]
-				\begin{center}
-					\begin{tikzpicture}[scale=1]
-						%\SetVertexSimple[Shape=circle,FillColor=white]
-						\def\rvar{1.2}
-						\Vertex[x=0.00, y=-2.00]{$u$}
-						\Vertex[x=\rvar*1.90, y=-0.62]{$t$}
-						\Vertex[x=\rvar*1.18, y=1.62]{$q$}
-						\Vertex[x=-1.18*\rvar, y=1.62]{$p$}
-						\Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
-						\Vertex[x=0, y=0]{$s$}
-						\Edges($u$,$t$,$q$,$p$)
-						\Edges($r$,$u$)
-						\Edges($s$,$t$)
-						\Edges($r$,$s$,$q$,$r$)
-						\Edges($p$,$t$,$s$)
-						\Edges($s$,$p$)
-					\end{tikzpicture}
-				\end{center}
-			\end{figure}
-			
-		\end{ejemplo}
-	\end{frame}
-	
-	\begin{frame}[fragile]
-		
-		Caminata: $p$,$q$,$t$,$s$,$q$,$r$,$u$
-		
-		\begin{figure}[ht]
-			\begin{center}
-				\begin{tikzpicture}[scale=1]
-					%\SetVertexSimple[Shape=circle,FillColor=white]
-					\def\rvar{1.2}
-					\Vertex[x=0.00, y=-2.00]{$u$}
-					\Vertex[x=\rvar*1.90, y=-0.62]{$t$}
-					\Vertex[x=\rvar*1.18, y=1.62]{$q$}
-					\Vertex[x=-1.18*\rvar, y=1.62]{$p$}
-					\Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
-					\Vertex[x=0, y=0]{$s$}
-					\Edges($u$,$t$,$q$,$p$)
-					\Edges($r$,$u$)
-					\Edges($s$,$t$)
-					\Edges($r$,$s$,$q$,$r$)
-					\Edges($p$,$t$,$s$)
-					\tikzset{EdgeStyle/.style = {->,color=blue}}
-					\Edges($p$,$q$,$t$,$s$,$q$,$r$,$u$)
-				\end{tikzpicture}
-			\end{center}
-		\end{figure}
-	\end{frame}
-	
-	\begin{frame}
-		
-		Camino: $p$,$q$,$s$,$r$,$u$,$t$
-		
-		\begin{figure}[ht]
-			\begin{center}
-				\begin{tikzpicture}[scale=1]
-					%\SetVertexSimple[Shape=circle,FillColor=white]
-					\def\rvar{1.2}
-					\Vertex[x=0.00, y=-2.00]{$u$}
-					\Vertex[x=\rvar*1.90, y=-0.62]{$t$}
-					\Vertex[x=\rvar*1.18, y=1.62]{$q$}
-					\Vertex[x=-1.18*\rvar, y=1.62]{$p$}
-					\Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
-					\Vertex[x=0, y=0]{$s$}
-					\Edges($u$,$t$,$q$,$p$)
-					\Edges($r$,$u$)
-					\Edges($s$,$t$)
-					\Edges($r$,$s$,$q$,$r$)
-					\Edges($p$,$t$,$s$)
-					\tikzset{EdgeStyle/.style = {->,color=blue}}
-					\Edges($p$,$q$,$s$,$r$,$u$,$t$)
-				\end{tikzpicture}
-			\end{center}
-		\end{figure}
-	\end{frame}
-	
-	\begin{frame}
-		
-		Ciclo: $p$,$q$,$s$,$r$,$u$,$t$,$p$
-		
-		\begin{figure}[ht]
-			\begin{center}
-				\begin{tikzpicture}[scale=1]
-					%\SetVertexSimple[Shape=circle,FillColor=white]
-					\def\rvar{1.2}
-					\Vertex[x=0.00, y=-2.00]{$u$}
-					\Vertex[x=\rvar*1.90, y=-0.62]{$t$}
-					\Vertex[x=\rvar*1.18, y=1.62]{$q$}
-					\Vertex[x=-1.18*\rvar, y=1.62]{$p$}
-					\Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
-					\Vertex[x=0, y=0]{$s$}
-					\Edges($u$,$t$,$q$,$p$)
-					\Edges($r$,$u$)
-					\Edges($s$,$t$)
-					\Edges($r$,$s$,$q$,$r$)
-					\Edges($p$,$t$,$s$)
-					\tikzset{EdgeStyle/.style = {->,color=blue}}
-					\Edges($p$,$q$,$s$,$r$,$u$,$t$,$p$)
-				\end{tikzpicture}
-			\end{center}
-		\end{figure}
-	\end{frame}
-	
-	
-	\begin{frame}
-		
-		\begin{lema} Sea $G$ un grafo.  Entonces, $x$ e $y$ pueden ser unidos por una caminata  si  y sólo si  $x$ e $y$ pueden ser unidos por un camino.
-		\end{lema}
-		\begin{idea} ($\Leftarrow$) es trivial (un camino es una caminata).
-			
-			\vskip .2cm
-			($\Rightarrow$) Eliminar "bucles".
-			
-			\begin{figure}[ht]
-				\begin{center}
-					\begin{tikzpicture}[scale=1]
-						\SetVertexSimple[Shape=circle,FillColor=white,MinSize=5 pt]
-						%
-						%\ponertz{-7}{-30}{$x=$}
-						\draw (-0.6,0) node {$x = $};				
-						\draw (0,0.4) node {$v_0$};
-						\Vertex[x=0.00, y=0]{v0}
-						\Vertex[x=1, y=0]{v1}
-						\draw (1,0.4) node {$v_1$};
-						\Vertex[x=3, y=0]{vi}
-						\draw (3,0.4) node {$v_i$};
-						\Vertex[x=2.5, y=0.5]{vi1}
-						\Vertex[x=2.5, y=1]{vi2}
-						\Vertex[x=3.5, y=0.5]{vi3}
-						\Vertex[x=3.5, y=1]{vi4}
-						\Edges(v0,v1)
-						\Edges(vi,vi1)
-						\Edges(vi1,vi2)
-						\draw (2.7,1.3) node {$\scriptstyle\bullet$};
-						\draw (2.9,1.5) node {$\scriptstyle\bullet$};
-						\draw (3.1,1.5) node {$\scriptstyle\bullet$};
-						\draw (3.3,1.3) node {$\scriptstyle\bullet$};
-						\draw (2,0) node {$\scriptstyle\bullet$};
-						\draw (2.3,0) node {$\scriptstyle\bullet$};
-						\Edges(vi3,vi4)
-						\Edges(vi3,vi)
-						\Vertex[x=5, y=0]{vr1}
-						\Vertex[x=6, y=0]{vr}
-						\Edges(vr1,vr)
-						\draw (6,0.4) node {$v_r$};
-						\draw (5,0.4) node {$v_{r-1}$};
-						\draw (6.6,0) node {$=y$};
-						
-						\SetVertexNormal[LineColor=white]
-						\Vertex[x=1.8, y=0]{s1}
-						\Vertex[x=2.2, y=0]{s2}
-						\Edges(v1,s1)
-						\Edges(vi,s2)
-						\draw (1.7,0) node {$\scriptstyle\bullet$};
-						\draw (2,0) node {$\scriptstyle\bullet$};
-						\draw (2.3,0) node {$\scriptstyle\bullet$};
-						
-						\Vertex[x=4.2, y=0]{t1}
-						\Vertex[x=3.8, y=0]{t2}
-						\Edges(vr1,t1)
-						\Edges(vi,t2)
-						\draw (3.7,0) node {$\scriptstyle\bullet$};
-						\draw (4,0) node {$\scriptstyle\bullet$};
-						\draw (4.3,0) node {$\scriptstyle\bullet$};
-					\end{tikzpicture}
-				\end{center}
-				Se transforma en 
-				\begin{center}
-					\begin{tikzpicture}[scale=1]
-						\SetVertexSimple[Shape=circle,FillColor=white,MinSize=5 pt]
-						%
-						%\ponertz{-7}{-30}{$x=$}
-						\draw (-0.6,0) node {$x = $};				
-						\draw (0,0.4) node {$v_0$};
-						\Vertex[x=0.00, y=0]{v0}
-						\Vertex[x=1, y=0]{v1}
-						\draw (1,0.4) node {$v_1$};
-						\Vertex[x=3, y=0]{vi}
-						\draw (3,0.4) node {$v_i$};
-						\Edges(v0,v1)
-						\Vertex[x=5, y=0]{vr1}
-						\Vertex[x=6, y=0]{vr}
-						\Edges(vr1,vr)
-						\draw (6,0.4) node {$v_r$};
-						\draw (5,0.4) node {$v_{r-1}$};
-						\draw (6.6,0) node {$=y$};
-						
-						\SetVertexNormal[LineColor=white]
-						\Vertex[x=1.8, y=0]{s1}
-						\Vertex[x=2.2, y=0]{s2}
-						\Edges(v1,s1)
-						\Edges(vi,s2)
-						\draw (1.7,0) node {$\scriptstyle\bullet$};
-						\draw (2,0) node {$\scriptstyle\bullet$};
-						\draw (2.3,0) node {$\scriptstyle\bullet$};
-						
-						\Vertex[x=4.2, y=0]{t1}
-						\Vertex[x=3.8, y=0]{t2}
-						\Edges(vr1,t1)
-						\Edges(vi,t2)
-						\draw (3.7,0) node {$\scriptstyle\bullet$};
-						\draw (4,0) node {$\scriptstyle\bullet$};
-						\draw (4.3,0) node {$\scriptstyle\bullet$};
-					\end{tikzpicture}
-				\end{center}	\qed
-			\end{figure}
-			
-			
-			
-			\vskip 4cm
-		\end{idea}
-		
-		
-		
-	\end{frame}
-	
-	\begin{frame} 
-		Escribamos $x \sim y$ siempre y cuando los vértices $x$ e $y$ de
-		$G$ puedan ser unidos por un camino en $G$: hablando en forma
-		rigurosa, esto significa que hay un camino $v_1,v_2,\ldots,v_k$ en
-		$G$ con $x=v_1$ e $y=v_k$. 
-		\vskip .3cm
-		
-		\begin{definicion}
-			Sea $G$ grafo,  diremos que es conexo si  para $x\sim y$ para cualesquiera  $x,y$ vértices en $G$. 
-		\end{definicion}
-		
-		\vskip .3cm
-		El  lema de la página anterior implica que:
-		\begin{itemize}
-			\item $x \sim x$ (reflexividad de $\sim$).
-			\item $x \sim y$, entonces $y \sim x$ (simetría de $\sim$).
-			\item $x \sim y$,  $y \sim z$, entonces  $x \sim z$ (transitividad  de $\sim$).
-		\end{itemize}
-		\vskip .3cm
-		Es decir, $\sim$  es una relación de equivalencia. 
-	\end{frame}
-	
-	
-	
-	
+    
+    \frame{\titlepage} 
+    
+    
+    
+    
+    \begin{frame}
+        Una aplicación importante de la noción de valencia es en el problema de determinar si dos grafos son o no isomorfos. 
+        
+        \vskip .6cm
+        
+        Si     $\alpha:V_1 \to  V_2$ es un isomorfismo entre $G_1$ y $G_2$, y $\alpha(v)=w$, entonces cada arista que contiene a $v$ se transforma en una arista que contiene a $w$. 
+        
+        \vskip .6cm
+        
+        En consecuencia $\delta(v)=\delta(w)$. Por otro lado, si $G_1$ tiene un vértice $x$, con valencia $\delta(x)=\delta_0$, y $G_2$ no tiene vértices    con valencia $\delta_0$, entonces $G_1$ y $G_2$ no pueden ser    isomorfos. 
+        
+        
+        
+        
+        
+        
+        
+        
+    \end{frame}
+    
+    
+    \begin{frame}
+        Esto nos da otra manera de ver que no son isomorfos los siguientes grafos:
+        
+        \vskip .5cm
+        \begin{figure}[ht]
+            \begin{center}
+                \begin{tabular}{llll}
+                    &
+                    \begin{tikzpicture}[scale=1]
+                        %\SetVertexSimple[Shape=circle,FillColor=white]
+                        \Vertex[x=0.00, y=2.00]{$a$}
+                        \Vertex[x=1.90, y=0.62]{$b$}
+                        \Vertex[x=1.18, y=-1.62]{$c$}
+                        \Vertex[x=-1.18, y=-1.62]{$d$}
+                        \Vertex[x=-1.90, y=0.62]{$e$}
+                        \Edges($c$, $b$,$a$,$e$,$d$,$b$,$a$,$d$)
+                        \Edges($e$,$b$)
+                    \end{tikzpicture}
+                    &
+                    \qquad
+                    & 
+                    \begin{tikzpicture}[scale=1]
+                        %\SetVertexSimple[Shape=circle,FillColor=white]
+                        \Vertex[x=0.00, y=2.00]{1}
+                        \Vertex[x=1.90, y=0.62]{2}
+                        \Vertex[x=1.18, y=-1.62]{3}
+                        \Vertex[x=-1.18, y=-1.62]{4}
+                        \Vertex[x=-1.90, y=0.62]{5}
+                        \Edges(1,2,3,4,5,1)
+                        \Edges(4,2,5)
+                    \end{tikzpicture}
+                \end{tabular}
+            \end{center}
+        \end{figure}
+        \vskip .4cm
+        Puesto que el primer grafo tiene un vértice de
+        valencia 1 y el segundo no.
+    \end{frame}
+    
+    
+    \begin{frame}
+        Una extensión de esta idea se da en la siguiente proposición.
+        
+        \vskip .4cm
+        \begin{proposicion}\label{criterioiso}Sean  $G_1$ y $G_2$ grafos isomorfos. Para cada $k\ge 0$ sea $n_i(k)$ el
+            número de vértices de $G_i$ que tienen valencia $k$ ($i=1,2$).
+            Entonces $n_1(k)=n_2(k)$.
+        \end{proposicion}
+        \vskip .4cm
+        \begin{proof} Hemos visto más arriba que si $\alpha:V_1 \to  V_2$ es un isomorfismo entre $G_1$ y $G_2$ y $v\in V_1$, entonces $\delta(v)=\delta(\alpha(v))$. Luego la cantidad de vértices con valencia $k$ en $G_1$ es igual  a la cantidad de vértices con valencia $k$ en $G_2$.     
+        \end{proof}
+    \end{frame}
+    
+    \begin{frame}
+        
+        
+        No hay ningún criterio general eficiente para determinar si dos grafos son isomorfos o no. En  el siguiente ejemplo, no se aplica el criterio anterior. 
+        
+        \vskip .4cm
+        \begin{ejemplo}
+            Probar que los siguientes grafos no son isomorfos.
+            
+            \begin{figure}[ht]
+                \begin{center}
+                    \begin{tabular}{llll}
+                        &
+                        \begin{tikzpicture}[scale=1]
+                            \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+                            \Vertex[x=0.00, y=2.00]{a}
+                            \Vertex[x=2., y=-1.50]{b}
+                            \Vertex[x=-2., y=-1.50]{c}
+                            \Edges(a,b,c,a)
+                            \Vertex[x=0.00, y=0.85]{1}
+                            \Vertex[x=1., y=-0.9]{2}
+                            \Vertex[x=-1., y=-0.9]{3}
+                            \Edges(1,2,3,1)
+                            \Edges(a,1,3,c,b,2)
+                            \draw (0,-2.2) node {$G_1$};
+                        \end{tikzpicture}
+                        &
+                        \qquad
+                        & 
+                        \begin{tikzpicture}[scale=0.65]
+                            \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+                            %                
+                            \Vertex[x=3.00, y=0.00]{1}
+                            \Vertex[x=1.50, y=2.60]{2}
+                            \Vertex[x=-1.50, y=2.60]{3}
+                            \Vertex[x=-3.00, y=0.00]{4}
+                            \Vertex[x=-1.50, y=-2.60]{5}
+                            \Vertex[x=1.50, y=-2.60]{6}
+                            \Edges(1,2,3,4,5,6,1)
+                            \Edges(1,4) \Edges(3,6) \Edges(2,5)
+                            \draw (0,-3.8) node {$G_2$};
+                        \end{tikzpicture}
+                    \end{tabular}
+                \end{center}
+            \end{figure}
+        \end{ejemplo}
+        
+        
+    \end{frame}
+    
+    
+    
+    \begin{frame}
+        \begin{solucion}
+            Ambos tienen $6$ vértices, $9$ aristas y todos los vértices son de valencia $3$. 
+            
+            \vskip .4cm
+            
+            
+            Sin embargo, observar que  $G_1$ tiene un subgrafo $K_3$:
+            \begin{center}
+                \begin{tikzpicture}[scale=1]
+                    \SetVertexSimple[Shape=circle,FillColor=white,MinSize=8 pt]
+                    \Vertex[x=0.00, y=2.00]{a}
+                    \Vertex[x=2., y=-1.50]{b}
+                    \Vertex[x=-2., y=-1.50]{c}
+                    \Edges(a,b,c,a)
+                \end{tikzpicture}
+            \end{center}
+            
+            Mientras que $G_2$ no lo tiene. Por lo tanto, $G_1$ y $G_2$ no son isomorfos.
+            
+        \end{solucion}
+    \end{frame}
+    
+    \begin{frame}\frametitle{Caminatas, caminos y ciclos}
+        \begin{definicion}  Una {\em caminata} en un grafo $G$ es  \index{caminata}
+            una secuencia de vértices
+            $$
+            v_1,v_2,\ldots,v_k,
+            $$
+            tal que $v_i$ y $v_{i+1}$ son adyacentes ($1 \le i \le k-1$). Si
+            todos los vértices son distintos, una caminata es llamada un {\em
+                camino}.  \index{camino}
+            
+            \vskip .4cm
+            
+            Llamaremos {\em ciclo} a una caminata  \index{ciclo}
+            $v_1,v_2,\ldots,v_{r+1}$ cuyos vértices son distintos exceptuando
+            los extremos, es decir que $v_1=v_{r+1}$ y  a menudo diremos que es un {\em
+                $r$-ciclo}, o un ciclo de {\em longitud} $r$ en $G$.
+            \index{longitud de un ciclo}
+        \end{definicion}
+        
+    \end{frame}
+    
+    \begin{frame}
+        \begin{ejemplo}
+            Dibujemos caminatas, caminos y ciclos en el siguiente grafo:
+            \vskip .4cm
+            
+            \begin{figure}[ht]
+                \begin{center}
+                    \begin{tikzpicture}[scale=1]
+                        %\SetVertexSimple[Shape=circle,FillColor=white]
+                        \def\rvar{1.2}
+                        \Vertex[x=0.00, y=-2.00]{$u$}
+                        \Vertex[x=\rvar*1.90, y=-0.62]{$t$}
+                        \Vertex[x=\rvar*1.18, y=1.62]{$q$}
+                        \Vertex[x=-1.18*\rvar, y=1.62]{$p$}
+                        \Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
+                        \Vertex[x=0, y=0]{$s$}
+                        \Edges($u$,$t$,$q$,$p$)
+                        \Edges($r$,$u$)
+                        \Edges($s$,$t$)
+                        \Edges($r$,$s$,$q$,$r$)
+                        \Edges($p$,$t$,$s$)
+                        \Edges($s$,$p$)
+                    \end{tikzpicture}
+                \end{center}
+            \end{figure}
+            
+        \end{ejemplo}
+    \end{frame}
+    
+    \begin{frame}[fragile]
+        
+        Caminata: $p$,$q$,$t$,$s$,$q$,$r$,$u$
+        
+        \begin{figure}[ht]
+            \begin{center}
+                \begin{tikzpicture}[scale=1]
+                    %\SetVertexSimple[Shape=circle,FillColor=white]
+                    \def\rvar{1.2}
+                    \Vertex[x=0.00, y=-2.00]{$u$}
+                    \Vertex[x=\rvar*1.90, y=-0.62]{$t$}
+                    \Vertex[x=\rvar*1.18, y=1.62]{$q$}
+                    \Vertex[x=-1.18*\rvar, y=1.62]{$p$}
+                    \Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
+                    \Vertex[x=0, y=0]{$s$}
+                    \Edges($u$,$t$,$q$,$p$)
+                    \Edges($r$,$u$)
+                    \Edges($s$,$t$)
+                    \Edges($r$,$s$,$q$,$r$)
+                    \Edges($p$,$t$,$s$)
+                    \tikzset{EdgeStyle/.style = {->,color=blue}}
+                    \Edges($p$,$q$,$t$,$s$,$q$,$r$,$u$)
+                \end{tikzpicture}
+            \end{center}
+        \end{figure}
+    \end{frame}
+    
+    \begin{frame}
+        
+        Camino: $p$,$q$,$s$,$r$,$u$,$t$
+        
+        \begin{figure}[ht]
+            \begin{center}
+                \begin{tikzpicture}[scale=1]
+                    %\SetVertexSimple[Shape=circle,FillColor=white]
+                    \def\rvar{1.2}
+                    \Vertex[x=0.00, y=-2.00]{$u$}
+                    \Vertex[x=\rvar*1.90, y=-0.62]{$t$}
+                    \Vertex[x=\rvar*1.18, y=1.62]{$q$}
+                    \Vertex[x=-1.18*\rvar, y=1.62]{$p$}
+                    \Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
+                    \Vertex[x=0, y=0]{$s$}
+                    \Edges($u$,$t$,$q$,$p$)
+                    \Edges($r$,$u$)
+                    \Edges($s$,$t$)
+                    \Edges($r$,$s$,$q$,$r$)
+                    \Edges($p$,$t$,$s$)
+                    \tikzset{EdgeStyle/.style = {->,color=blue}}
+                    \Edges($p$,$q$,$s$,$r$,$u$,$t$)
+                \end{tikzpicture}
+            \end{center}
+        \end{figure}
+    \end{frame}
+    
+    \begin{frame}
+        
+        Ciclo: $p$,$q$,$s$,$r$,$u$,$t$,$p$
+        
+        \begin{figure}[ht]
+            \begin{center}
+                \begin{tikzpicture}[scale=1]
+                    %\SetVertexSimple[Shape=circle,FillColor=white]
+                    \def\rvar{1.2}
+                    \Vertex[x=0.00, y=-2.00]{$u$}
+                    \Vertex[x=\rvar*1.90, y=-0.62]{$t$}
+                    \Vertex[x=\rvar*1.18, y=1.62]{$q$}
+                    \Vertex[x=-1.18*\rvar, y=1.62]{$p$}
+                    \Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
+                    \Vertex[x=0, y=0]{$s$}
+                    \Edges($u$,$t$,$q$,$p$)
+                    \Edges($r$,$u$)
+                    \Edges($s$,$t$)
+                    \Edges($r$,$s$,$q$,$r$)
+                    \Edges($p$,$t$,$s$)
+                    \tikzset{EdgeStyle/.style = {->,color=blue}}
+                    \Edges($p$,$q$,$s$,$r$,$u$,$t$,$p$)
+                \end{tikzpicture}
+            \end{center}
+        \end{figure}
+    \end{frame}
+    
+    
+    \begin{frame}
+        
+        \begin{lema} Sea $G$ un grafo.  Entonces, $x$ e $y$ pueden ser unidos por una caminata  si  y sólo si  $x$ e $y$ pueden ser unidos por un camino.
+        \end{lema}
+        \begin{idea} ($\Leftarrow$) es trivial (un camino es una caminata).
+            
+            \vskip .2cm
+            ($\Rightarrow$) Eliminar "bucles".
+            
+            \begin{figure}[ht]
+                \begin{center}
+                    \begin{tikzpicture}[scale=1]
+                        \SetVertexSimple[Shape=circle,FillColor=white,MinSize=5 pt]
+                        %
+                        %\ponertz{-7}{-30}{$x=$}
+                        \draw (-0.6,0) node {$x = $};                
+                        \draw (0,0.4) node {$v_0$};
+                        \Vertex[x=0.00, y=0]{v0}
+                        \Vertex[x=1, y=0]{v1}
+                        \draw (1,0.4) node {$v_1$};
+                        \Vertex[x=3, y=0]{vi}
+                        \draw (3,0.4) node {$v_i$};
+                        \Vertex[x=2.5, y=0.5]{vi1}
+                        \Vertex[x=2.5, y=1]{vi2}
+                        \Vertex[x=3.5, y=0.5]{vi3}
+                        \Vertex[x=3.5, y=1]{vi4}
+                        \Edges(v0,v1)
+                        \Edges(vi,vi1)
+                        \Edges(vi1,vi2)
+                        \draw (2.7,1.3) node {$\scriptstyle\bullet$};
+                        \draw (2.9,1.5) node {$\scriptstyle\bullet$};
+                        \draw (3.1,1.5) node {$\scriptstyle\bullet$};
+                        \draw (3.3,1.3) node {$\scriptstyle\bullet$};
+                        \draw (2,0) node {$\scriptstyle\bullet$};
+                        \draw (2.3,0) node {$\scriptstyle\bullet$};
+                        \Edges(vi3,vi4)
+                        \Edges(vi3,vi)
+                        \Vertex[x=5, y=0]{vr1}
+                        \Vertex[x=6, y=0]{vr}
+                        \Edges(vr1,vr)
+                        \draw (6,0.4) node {$v_r$};
+                        \draw (5,0.4) node {$v_{r-1}$};
+                        \draw (6.6,0) node {$=y$};
+                        
+                        \SetVertexNormal[LineColor=white]
+                        \Vertex[x=1.8, y=0]{s1}
+                        \Vertex[x=2.2, y=0]{s2}
+                        \Edges(v1,s1)
+                        \Edges(vi,s2)
+                        \draw (1.7,0) node {$\scriptstyle\bullet$};
+                        \draw (2,0) node {$\scriptstyle\bullet$};
+                        \draw (2.3,0) node {$\scriptstyle\bullet$};
+                        
+                        \Vertex[x=4.2, y=0]{t1}
+                        \Vertex[x=3.8, y=0]{t2}
+                        \Edges(vr1,t1)
+                        \Edges(vi,t2)
+                        \draw (3.7,0) node {$\scriptstyle\bullet$};
+                        \draw (4,0) node {$\scriptstyle\bullet$};
+                        \draw (4.3,0) node {$\scriptstyle\bullet$};
+                    \end{tikzpicture}
+                \end{center}
+                Se transforma en 
+                \begin{center}
+                    \begin{tikzpicture}[scale=1]
+                        \SetVertexSimple[Shape=circle,FillColor=white,MinSize=5 pt]
+                        %
+                        %\ponertz{-7}{-30}{$x=$}
+                        \draw (-0.6,0) node {$x = $};                
+                        \draw (0,0.4) node {$v_0$};
+                        \Vertex[x=0.00, y=0]{v0}
+                        \Vertex[x=1, y=0]{v1}
+                        \draw (1,0.4) node {$v_1$};
+                        \Vertex[x=3, y=0]{vi}
+                        \draw (3,0.4) node {$v_i$};
+                        \Edges(v0,v1)
+                        \Vertex[x=5, y=0]{vr1}
+                        \Vertex[x=6, y=0]{vr}
+                        \Edges(vr1,vr)
+                        \draw (6,0.4) node {$v_r$};
+                        \draw (5,0.4) node {$v_{r-1}$};
+                        \draw (6.6,0) node {$=y$};
+                        
+                        \SetVertexNormal[LineColor=white]
+                        \Vertex[x=1.8, y=0]{s1}
+                        \Vertex[x=2.2, y=0]{s2}
+                        \Edges(v1,s1)
+                        \Edges(vi,s2)
+                        \draw (1.7,0) node {$\scriptstyle\bullet$};
+                        \draw (2,0) node {$\scriptstyle\bullet$};
+                        \draw (2.3,0) node {$\scriptstyle\bullet$};
+                        
+                        \Vertex[x=4.2, y=0]{t1}
+                        \Vertex[x=3.8, y=0]{t2}
+                        \Edges(vr1,t1)
+                        \Edges(vi,t2)
+                        \draw (3.7,0) node {$\scriptstyle\bullet$};
+                        \draw (4,0) node {$\scriptstyle\bullet$};
+                        \draw (4.3,0) node {$\scriptstyle\bullet$};
+                    \end{tikzpicture}
+                \end{center}    \qed
+            \end{figure}
+            
+            
+            
+            \vskip 4cm
+        \end{idea}
+        
+        
+        
+    \end{frame}
+    
+    \begin{frame} 
+        Escribamos $x \sim y$ siempre y cuando los vértices $x$ e $y$ de
+        $G$ puedan ser unidos por un camino en $G$: hablando en forma
+        rigurosa, esto significa que hay un camino $v_1,v_2,\ldots,v_k$ en
+        $G$ con $x=v_1$ e $y=v_k$. 
+        \vskip .3cm
+        
+        \begin{definicion}
+            Sea $G$ grafo,  diremos que es conexo si  para $x\sim y$ para cualesquiera  $x,y$ vértices en $G$. 
+        \end{definicion}
+        
+        \vskip .3cm
+        El  lema de la página anterior implica que:
+        \begin{itemize}
+            \item $x \sim x$ (reflexividad de $\sim$).
+            \item $x \sim y$, entonces $y \sim x$ (simetría de $\sim$).
+            \item $x \sim y$,  $y \sim z$, entonces  $x \sim z$ (transitividad  de $\sim$).
+        \end{itemize}
+        \vskip .3cm
+        Es decir, $\sim$  es una relación de equivalencia. 
+    \end{frame}
+    
+    
+    
+    
 \end{document}
 
