--- a/2021-1/beamer/C21_md1.tex
+++ b/2021-1/beamer/C21_md1.tex
@@ -22,10 +22,10 @@
 \usetikzlibrary{arrows}
 \usetikzlibrary{matrix}
 \tikzset{
-	every picture/.append style={
-		execute at begin picture={\deactivatequoting},
-		execute at end picture={\activatequoting}
-	}
+    every picture/.append style={
+        execute at begin picture={\deactivatequoting},
+        execute at end picture={\activatequoting}
+    }
 }
 \usetikzlibrary{decorations.pathreplacing,angles,quotes}
 \usetikzlibrary{shapes.geometric}
@@ -36,9 +36,9 @@
 \usepackage{tkz-graph}
 \usepackage{polynom}
 \polyset{%
-	style=B,
-	delims={(}{)},
-	div=:
+    style=B,
+    delims={(}{)},
+    div=:
 }
 \renewcommand\labelitemi{$\circ$}
 \setlist[enumerate]{label={(\arabic*)}}
@@ -93,200 +93,225 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%LETRAS
 
 
-\title[Clase 22 - Grafos 4]{Matemática Discreta I \\ Clase 22 - Grafos 4}
+\title[Clase 21 - Caminatas eulerianas]{Matemática Discreta I \\ Clase 21 - Caminatas eulerianas, ciclos hamiltonianos}
 %\author[C. Olmos / A. Tiraboschi]{Carlos Olmos / Alejandro Tiraboschi}
 \institute[]{\normalsize FAMAF / UNC
-	\\[\baselineskip] ${}^{}$
-	\\[\baselineskip]
+    \\[\baselineskip] ${}^{}$
+    \\[\baselineskip]
 }
-\date[04/06/2020]{2 de junio de 2020}
+\date[03/06/2021]{3 de junio de 2021}
 
 
 
 
 \begin{document}
-	
-	\frame{\titlepage} 
-	
-	\begin{frame}\frametitle{Los puentes de Könisberg}
-		
-		{\color{blue}Pregunta}%
-	\vskip .2cm
-			¿Es posible cruzar todos los puentes pasando  una y solo una vez por cada uno? 		Leonhard Euler (1707-1783).
-	
-		
-		\begin{figure}
-			\includegraphics[scale=0.12]{images/konisberg_hc.png}
-		\end{figure}
-		
-	\end{frame}
-	
-	
-	\begin{frame}\frametitle{Los puentes de Könisberg - versión 2}
-		\begin{figure}
-			\includegraphics[scale=0.23]{images/konisberg2.jpg}
-		\end{figure}
-	\end{frame}
-	
-	\begin{frame}\frametitle{Los puentes de Könisberg - versión 3}
-		\begin{figure}
-			\includegraphics[scale=0.18]{images/konisberg3.jpg}
-		\end{figure}
-		
-		Ahora el problema se reduce a encontrar una caminata  que use cada arista (o puente) una y solo una vez.
-	\end{frame}
-	
-	\begin{frame}
-		\begin{observacion}
-			$\delta(A)=5$, $\delta(B)=3$, $\delta(C)=3$, $\delta(D)=3$.
-		\end{observacion}
-		
-		\vskip .5cm
-		
-		Euler, abstrayéndose del problema concreto, razonó de la siguiente manera:
-		
-		\vskip .5cm 
-		\begin{itemize}
-			\item Supongamos que el vértice de partida es $x$ y  el de llegada es $y$. Todos los demás los llamo intermedios.
-			\item En un vértice intermedio cada vez que entro por un puente salgo por otro. Eso  me ``aporta''  2 a la valencia.
-			\item Terminado el proceso usé todos los puentes, por lo tanto  en cada vértice intermedio la cantidad de entradas más la cantidad de salidas es la valencia. Como la cantidad de entradas es igual a la cantidad de salidas, la valencia es par.
-			
-		\end{itemize}
-		
-		
-	\end{frame}
-	
-	\begin{frame}
-		\textbf{Concluyendo}
-		\vskip .3cm
-		\begin{itemize}
-			\item Si hay una caminata que pasa por cada puente una y solo una vez,  la cantidad de vértices con valencia impar es a lo sumo 2. 
-			\item Como todos los vértices en el problema tienen valencia impar, el problema no tiene solución. 
-		\end{itemize}
-		\vskip .3cm
-		Como veremos más adelante el problema de los puentes de Könisberg puede ser generalizado y también vale la recíproca.
-		\vskip .5cm
-		\textbf{Cita:}  Euler, Leonhard (1736). \href{http://math.dartmouth.edu/\~euler/docs/originals/E053.pdf}{Solutio problematis ad geometriam situs pertinentis}. Comment. Acad. Sci. U. Petrop 8, 128-40 (en latín)
-		
-	\end{frame}
-	
-	\begin{frame}
-		\begin{ejemplo} ¿Es posible recorrer el siguiente gráfo con una caminata que pase por cada vértice una sola vez y volver al de partida? ¿Es posible hacer una caminata  que pasa por cada arista una sola vez?
-			\begin{figure}[h]
-				\begin{center}
-					\begin{tikzpicture}[scale=1]
-						%\SetVertexSimple[Shape=circle,FillColor=white]
-						\def\rvar{1.2}
-						\Vertex[x=0.00, y=-2.00]{$u$}
-						\Vertex[x=\rvar*1.90, y=-0.62]{$t$}
-						\Vertex[x=\rvar*1.18, y=1.62]{$q$}
-						\Vertex[x=-1.18*\rvar, y=1.62]{$p$}
-						\Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
-						\Vertex[x=0, y=0]{$s$}
-						\Edges($u$,$t$,$q$,$p$,$r$,$u$,$s$,$t$,$r$,$s$,$q$,$r$,$p$,$t$,$s$,$u$,$s$,$p$)
-					\end{tikzpicture}
-				\end{center}
-			\end{figure}
-			
-		\end{ejemplo}
-	\end{frame}
-	
-	\begin{frame}
-		\begin{solucion}
-			Para la primera pregunta una posibilidad es el ciclo $p,q,t,s,u,r,p$.
-			
-			\vskip .5cm
-			
-			La segunda pregunta tiene respuesta negativa:
-			
-			Las valencias son 
-			$$\delta(p) = 4,\quad\delta(q) = 4,\quad\delta(s) = 5,\quad\delta(r) = 5,\quad\delta(u) = 3,\quad\delta(t) = 5.$$
-			
-			Como en los puentes de Königsberg,  al haber más de $2$ vértices de valencia impar, no es posible recorrer todas las aristas una sola vez.
-			
-			\qed
-			
-			
-			
-		\end{solucion}
-	\end{frame}
-	
-	\begin{frame}
-		
-		
-		\begin{definicion}
-			Un {\em ciclo hamiltoniano} en un grafo $G$ es un ciclo que contiene a todos los vértices del grafo.
-			\vskip .2cm
-			Una {\em caminata euleriana} en un grafo $G$ es un caminata que usa todas las aristas de $G$ exactamente
-			una vez. Una caminata euleriana que comienza y termina en un mismo vértice se llama también {\em circuito euleriano}.
-		\end{definicion}
-		
-		\vskip .2cm
-		
-		\begin{teorema} Un grafo conexo con más de un vértice posee una caminata euleriana de $v$ a $w$, con $v \not= w$ si y sólo si $v$ y $w$ son los únicos vértices de grado impar. Un grafo conexo con más de un vértice tiene un circuito euleriano si y sólo si todos los vértices tienen grado par.
-		\end{teorema}
-	\end{frame}
-	
-	\begin{frame}
-		Algoritmo para encontrar caminatas eulerianas de $v$ a $w$, con $v \not= w$:
-		\vskip .2cm
-		\textit{``Parta del vértice $v$ y recorra el grafo sin pasar dos veces por la misma arista. Cuando no pueda avanzar más se encontrará en $w$ y habrá hecho una caminata euleriana.''}
-		\vskip .4cm
-		El caso de un grafo donde todas las valencias son pares se puede reducir al anterior: si deseamos una caminata euleriana que empiece y termine en $v$
-		\begin{itemize}
-			\item eliminamos una arista $\{v,w\}$ del grafo que contenga a $v$,
-			\item el nuevo  grafo tiene solo dos vértices, $v$ y $w$, de valencia impar,
-			\item aplicamos el caso  anterior, con lo cual hacemos una caminata euleriana que termina en  $w$,
-			\item terminamos la caminata agregando  la arista $\{v,w\}$. 
-		\end{itemize}
-		
-		
-		
-	\end{frame}
-	
-	
-	
-	\begin{frame}
-		\begin{ejemplo}
-			Encontremos una caminata euleriana con origen en $p$ y final en $r$ del siguiente grafo. 
-			\begin{figure}[ht]
-				\begin{center}
-					\begin{tikzpicture}[scale=1]
-						%\SetVertexSimple[Shape=circle,FillColor=white]
-						\def\rvar{1.2}
-						\Vertex[x=0.00, y=-2.00]{$u$}
-						\Vertex[x=\rvar*1.90, y=-0.62]{$t$}
-						\Vertex[x=\rvar*1.18, y=1.62]{$q$}
-						\Vertex[x=-1.18*\rvar, y=1.62]{$p$}
-						\Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
-						\Vertex[x=0, y=0]{$s$}
-						\Edges($u$,$t$,$q$,$p$)
-						\Edges($r$,$u$)
-						\Edges($s$,$t$)
-						\Edges($r$,$s$,$q$,$r$)
-						\Edges($p$,$t$,$s$)
-						\Edges($s$,$p$)
-					\end{tikzpicture}
-				\end{center}
-			\end{figure}
-			
-		\end{ejemplo}
-	\end{frame}
-	
-	\begin{frame}
-		\begin{solucion}
-			Debemos primero observar que la caminata euleriana debe existir pues $\delta(p)=3$, $\delta(q)=4$, $\delta(r)=3$, $\delta(s)=4$, 	$\delta(t)=4$, y $\delta(u)=2$. 
-			\vskip .2cm
-			
-			Como fue mencionado más arriba,  el algoritmo más sencillo es en este caso el que sirve: debemos partir de $p$ y recorrer el grafo sin repetir aristas. Cuando  no podamos avanzar más (bajo estas condiciones) habremos obtenido la caminata euleriana. Una posible solución es, por ejemplo,
-			$$
-			p,s,q,p,t,u,r,s,t,q,r
-			$$  
-			\vskip .2cm
-			Existen muchas posibles caminatas eulerianas de $p$ a $r$, por ejemplo le proponemos que encuentre una cuya primera arista sea $\{p,t\}$.
-		\end{solucion}
-	\end{frame}
-	
-	
+    
+    \frame{\titlepage} 
+    
+    \begin{frame}\frametitle{Los puentes de Könisberg}
+        
+        {\color{blue}Pregunta}%
+    \vskip .2cm
+            ¿Es posible cruzar todos los puentes pasando  una y solo una vez por cada uno?         Leonhard Euler (1707-1783).
+    
+        
+        \begin{figure}
+            \includegraphics[scale=0.12]{images/konisberg_hc.png}
+        \end{figure}
+        
+    \end{frame}
+    
+    
+    \begin{frame}\frametitle{Los puentes de Könisberg - versión 2}
+        \begin{figure}
+            \includegraphics[scale=0.23]{images/konisberg2.jpg}
+        \end{figure}
+    \end{frame}
+    
+    \begin{frame}\frametitle{Los puentes de Könisberg - versión 3}
+        \begin{figure}
+            \includegraphics[scale=0.18]{images/konisberg3.jpg}
+        \end{figure}
+        
+        Ahora el problema se reduce a encontrar una caminata  que use cada arista (o puente) una y solo una vez.
+    \end{frame}
+    
+    \begin{frame}
+        \begin{observacion}
+            $\delta(A)=5$, $\delta(B)=3$, $\delta(C)=3$, $\delta(D)=3$.
+        \end{observacion}
+        
+        \vskip .5cm
+        
+        Euler, abstrayéndose del problema concreto, razonó de la siguiente manera:
+        
+        \vskip .5cm 
+        \begin{itemize}
+            \item Supongamos que el vértice de partida es $x$ y  el de llegada es $y$. Todos los demás los llamo intermedios.
+            \item En un vértice intermedio cada vez que entro por un puente salgo por otro. Eso  me ``aporta''  2 a la valencia.
+            \item Terminado el proceso usé todos los puentes, por lo tanto  en cada vértice intermedio la cantidad de entradas más la cantidad de salidas es la valencia. Como la cantidad de entradas es igual a la cantidad de salidas, la valencia es par.
+            
+        \end{itemize}
+        
+        
+    \end{frame}
+    
+    \begin{frame}
+        \textbf{Concluyendo}
+        \vskip .3cm
+        \begin{itemize}
+            \item Si hay una caminata que pasa por cada puente una y solo una vez,  la cantidad de vértices con valencia impar es a lo sumo 2. 
+            \item Como todos los vértices en el problema tienen valencia impar, el problema no tiene solución. 
+        \end{itemize}
+        \vskip .3cm
+        Como veremos más adelante el problema de los puentes de Könisberg puede ser generalizado y también vale la recíproca.
+        \vskip .5cm
+        \textbf{Cita:}  Euler, Leonhard (1736). \href{http://math.dartmouth.edu/\~euler/docs/originals/E053.pdf}{Solutio problematis ad geometriam situs pertinentis}. Comment. Acad. Sci. U. Petrop 8, 128-40 (en latín)
+        
+    \end{frame}
+    
+    \begin{frame}
+        \begin{ejemplo} ¿Es posible recorrer el siguiente gráfo con una caminata que pase por cada vértice una sola vez y volver al de partida? ¿Es posible hacer una caminata  que pasa por cada arista una sola vez?
+            \begin{figure}[h]
+                \begin{center}
+                    \begin{tikzpicture}[scale=1]
+                        %\SetVertexSimple[Shape=circle,FillColor=white]
+                        \def\rvar{1.2}
+                        \Vertex[x=0.00, y=-2.00]{$u$}
+                        \Vertex[x=\rvar*1.90, y=-0.62]{$t$}
+                        \Vertex[x=\rvar*1.18, y=1.62]{$q$}
+                        \Vertex[x=-1.18*\rvar, y=1.62]{$p$}
+                        \Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
+                        \Vertex[x=0, y=0]{$s$}
+                        \Edges($u$,$t$,$q$,$p$,$r$,$u$,$s$,$t$,$r$,$s$,$q$,$r$,$p$,$t$,$s$,$u$,$s$,$p$)
+                    \end{tikzpicture}
+                \end{center}
+            \end{figure}
+            
+        \end{ejemplo}
+    \end{frame}
+    
+    \begin{frame}
+        \begin{solucion}
+            Para la primera pregunta una posibilidad es el ciclo $p,q,t,s,u,r,p$.
+            
+            \vskip .5cm
+            
+            La segunda pregunta tiene respuesta negativa:
+            
+            Las valencias son 
+            $$\delta(p) = 4,\quad\delta(q) = 4,\quad\delta(s) = 5,\quad\delta(r) = 5,\quad\delta(u) = 3,\quad\delta(t) = 5.$$
+            
+            Como en los puentes de Königsberg,  al haber más de $2$ vértices de valencia impar, no es posible recorrer todas las aristas una sola vez.
+            
+            \qed
+            
+            
+            
+        \end{solucion}
+    \end{frame}
+    
+    \begin{frame}
+        
+        
+        \begin{definicion}
+            Un {\em ciclo hamiltoniano} en un grafo $G$ es un ciclo que contiene a todos los vértices del grafo.
+            \vskip .2cm
+            Una {\em caminata euleriana} en un grafo $G$ es un caminata que usa todas las aristas de $G$ exactamente
+            una vez. Una caminata euleriana que comienza y termina en un mismo vértice se llama también {\em circuito euleriano}.
+        \end{definicion}
+        
+        \vskip .2cm
+        
+        \begin{teorema}  Un grafo conexo con más de un vértice tiene un circuito euleriano si y sólo si todos los vértices tienen grado par. Un grafo conexo con más de un vértice posee caminatas eulerianas de $v$ a $w$, con $v \not= w$ si y sólo si $v$ y $w$ son los únicos vértices de grado impar.
+        \end{teorema}
+    \end{frame}
+    
+    \begin{frame}
+        \frametitle{Idea de la demostración (1)}
+        
+        Observemos que toda caminata que no repite aristas en un grafo par se detiene en el origen.
+        \vskip .2cm
+        
+        Algoritmo para encontrar caminatas eulerianas en un grafo par:
+        \vskip .2cm
+        \begin{enumerate}
+            \item \textbf{Paso 1.} Elija cualquier vértice  inicial $v$ y haga una caminata  que no repita aristas y  que vuelva al vértice (de $v$ a $v$). 
+            \vskip .2cm
+            (recorrido cerrado, puede no cubrir todas las aristas).
+            \vskip .2cm
+            \item \textbf{Paso iterativo} 
+            \begin{enumerate}
+                \item[\textit{i)}] Mientras exista un vértice $u$ en la caminata ya realizada, pero que tenga aristas que no formen parte de la caminata, inicie otra caminata desde $u$ hasta $u$ siguiendo las aristas no utilizadas.
+                \item[\textit{ii)}] Inserte esta  caminata a la caminata  anterior para formar una caminata nueva (más larga).
+                \item[\textit{iii)}] Si no cubrió todas las aristas vuelva a \textit{i)}.
+            \end{enumerate} 
+            
+        \end{enumerate}
+    
+    \end{frame}
+    
+    \begin{frame}\frametitle{Idea de la demostración (2)}
+
+        En  el paso iterativo el subgrafo que obtenemos luego de quitar las aristas recorridas es par. Esto nos permite hacer caminatas cerradas  por aristas no utilizadas desde cada vértice con aristas no utilizadas.
+        \vskip .6cm
+
+        
+            El caso de un grafo donde todas las valencias son pares excepto $2$ se puede reducir al anterior: si deseamos una caminata euleriana que empiece por $v$ y termine en $w$.
+        \begin{itemize}
+            \item Comenzamos en $v$ y haga una caminata  que no repita aristas hasta que se detenga. 
+            \item Elimine la aristas utilizadas. El grafo que queda es par y  ahí utilizamos el algoritmo para ese caso. 
+        \end{itemize}
+        
+        \qed
+        
+    \end{frame}
+    
+    
+    
+    \begin{frame}
+        \begin{ejemplo}
+            Encontremos una caminata euleriana con origen en $p$ y final en $r$ del siguiente grafo. 
+            \begin{figure}[ht]
+                \begin{center}
+                    \begin{tikzpicture}[scale=1]
+                        %\SetVertexSimple[Shape=circle,FillColor=white]
+                        \def\rvar{1.2}
+                        \Vertex[x=0.00, y=-2.00]{$u$}
+                        \Vertex[x=\rvar*1.90, y=-0.62]{$t$}
+                        \Vertex[x=\rvar*1.18, y=1.62]{$q$}
+                        \Vertex[x=-1.18*\rvar, y=1.62]{$p$}
+                        \Vertex[x=-1.90*\rvar, y=-0.62]{$r$}
+                        \Vertex[x=0, y=0]{$s$}
+                        \Edges($u$,$t$,$q$,$p$)
+                        \Edges($r$,$u$)
+                        \Edges($s$,$t$)
+                        \Edges($r$,$s$,$q$,$r$)
+                        \Edges($p$,$t$,$s$)
+                        \Edges($s$,$p$)
+                    \end{tikzpicture}
+                \end{center}
+            \end{figure}
+            
+        \end{ejemplo}
+    \end{frame}
+    
+    \begin{frame}
+        \begin{solucion}
+            Debemos primero observar que la caminata euleriana debe existir pues $\delta(p)=3$, $\delta(q)=4$, $\delta(r)=3$, $\delta(s)=4$,     $\delta(t)=4$, y $\delta(u)=2$. 
+            \vskip .2cm
+            
+            Debemos partir de $p$ y recorrer el grafo sin repetir aristas. Cuando  no podamos avanzar más habremos obtenido una caminata euleriana de un subgrafo:  en este caso todo el grafo. Una posible solución es, por ejemplo,
+            $$
+            p,s,q,p,t,u,r,s,t,q,r
+            $$  
+            \vskip .2cm
+            Existen muchas posibles caminatas eulerianas de $p$ a $r$, por ejemplo le proponemos que encuentre una cuya primera arista sea $\{p,t\}$.
+
+            \qed
+        \end{solucion}
+    \end{frame}
+    
+    
 \end{document}
 
