--- a/2021-1/tareas/tarea_08.tex
+++ b/2021-1/tareas/tarea_08.tex
@@ -110,7 +110,7 @@
 
 \newcommand{\tarea}[1]{
 	\begin{center}
-		{\Large Matemática Discreta I - 2020/1} \vskip.4cm
+		{\Large Matemática Discreta I - 2021/1} \vskip.4cm
 		{\Large Tarea #1}\vskip .4cm
 \end{center}}
 
@@ -143,8 +143,8 @@
 
 \begin{ejercicio}
 	\begin{enumerate}
-		\item[1.] (50 pts) Encontrar el resto de dividir $9^{52}\cdot 7^{33}$ por $8$.
-		\item[2.]  (50 pts)  Probar\textbf{ usando congruencias} que todo número de la forma $3^{2n}-2^n$ es divisible por $7$ . 
+		\item[1.] (50 pts) Encontrar el resto de dividir $323^{5843}$ por $13$.
+		\item[2.]  (50 pts)  Probar\textbf{ usando congruencias} que todo número de la forma $4^{2n}-7^n$ es divisible por $9$ . 
 	\end{enumerate}
 \end{ejercicio}
 	
